Atividade Site sobre Ods 13
Atividade atualizada correta do exercicio da semana 2 para criação de um site que fale sobre alguma ODS.

--- a/atividade3.html
+++ b/atividade3.html
@@ -2,6 +2,7 @@
 <html  lang = " pt ">
 <head>
     <link  rel="stylesheet" type="text/css" href ="style1.css" media = "screen"/>
+    <link rel="shortcut icon" type="imagem" href="ods13.jpg"/>
     <meta  charset = " UTF-8 " >
     <title> Ação Contra a Mudança Global do Clima </title>
 </head>
@@ -10,7 +11,7 @@
     <h1> __________________________________________________________________________________________________________________________ </h1>
     <h1 id="b1"> Ação Contra a Mudança Global do Clima </h1> 
        <h2 id="b1a"> Tomar medidas urgentes para combater uma mudança climática e seus impactos. </h2>
-        <img src="ods13.jpg" widht=100px height=100px id="b3" />
+        <img src="ods13.jpg" widht=100px height=100px id="b3" alt="Retrato de um casal de ursos em cima de um bloco de gelo que provavelmente se soltou das geleiras por conta do aquecimento global." />
          <p>
          <br>
          <br>
@@ -26,21 +27,67 @@
           <a id="b2" href="https://nacoesunidas.org/pos2015/ods13/" target="Oi">Clique ODS 13</a> 
      <h1> _________________________________________________________________________________________________________________________ </h1>        
     </div>
-         <h1> ODS # 13 Ação Contra a Mudança Global do Clima </h1>
-         <h4> Combate às alterações climáticas. Assim como no ODS 11, este objetivo confere importância à resiliência e a capacidade de adaptação dos grupos humanos diante dos riscos associados ao clima e às características naturais de todos os países. </h4>
-         <img src="pexeels.jpg" widht=400px height=300px id="b4" />
-         <iframe  width=" 560" height="315" src ="https://www.youtube.com/embed/BtrJntzrp8M " frameborder = " 0 " allow = " acelerômetro; reprodução automática; reprodução automática; mídia criptografada; giroscópio; entrada de imagem -Picture" allowFullScreen> </iframe>
+    <div id="t2">
+     <h1>__________________________________________________________________________________________________________________________</h1>
+         <h1 id="b5"> ODS # 13 Ação Contra a Mudança Global do Clima </h1>
+         <h4 id="b6"> Combate às alterações climáticas. Assim como no ODS 11, este objetivo confere importância à resiliência e a capacidade de adaptação dos grupos humanos diante dos riscos associados ao clima e às características naturais de todos os países. </h4>
+         <p>
+         <br>
+         <br>
+         </p>
+         <img src="pexeels.jpg" widht=500px height=500px alt="Imagem de uma grande queimada em uma serra a beira de um lago durante a noite." id="b4" />
+         <iframe id="t3"  width=" 560" height="315" src ="https://www.youtube.com/embed/BtrJntzrp8M " frameborder = " 0 " allow = " acelerômetro; reprodução automática; reprodução automática; mídia criptografada; giroscópio; entrada de imagem -Picture" allowFullScreen> </iframe>
+         <img id="b8" src="vexels.jpg" width="200" height="200" alt="ilustração em forma de desenho de uma fábrica liberando fumaça de uma chaminé."/>
     <h1> __________________________________________________________________________________________________________________________ </h1>
-         <h2> METAS </h2>
-    <h3> Meta 1 </h3>
-       <h4> Reforçar a resiliência e a capacidade de adaptação a riscos relacionados ao clima e às catástrofes naturais em todos os países. </h4>
-    <h3> Meta 2 </h3>
-       <h4> Integrar medidas de mudança de clima nas políticas, estratégias e planejamentos nacionais. </ h4 > 
-    <h3> Meta 3 </h3>   
-       <h4> Melhorar a educação, aumentar a conscientização e a capacidade humana e institucional sobre mitigação, adaptação, redução de impacto e alerta precoce da mudança de clima. </h4>
-    <h3> Meta 4 </h3>
-       <h4> Implementar o compromisso assumido pelos países participantes da Convenção Quadro das Nações Unidas sobre Mudança do Clima [UNFCCC] para uma meta de mobilizar conjuntamente US $ 100 bilhões por ano a partir de 2020, de todas as fontes, para atender às necessidades dos países em desenvolvimento, sem contexto das ações de mitigação aplicáveis ​​e transparência na implementação; e operacionalizar plenamente o Fundo Verde para Clima por meio de sua capitalização ou mais cedo possível. </ h4 >
+    </div> 
+      <h2 id="b7"> METAS ODS 13 </h2>
+      <p>
+          <br>
+          <br>
+      </p>
+    <h3 id="b10">-Meta 1 </h3>
+       <h4 id="b9">#13.1-Reforçar a resiliência e a capacidade de adaptação a riscos relacionados ao clima e às catástrofes naturais em todos os países. </h4>
+    <h3 id="b10">-Meta 2 </h3>
+       <h4 id="b9">#13.2-Integrar medidas de mudança de clima nas políticas, estratégias e planejamentos nacionais. </h4> 
+    <h3 id="b10">-Meta 3 </h3>   
+       <h4 id="b9">#13.3-Melhorar a educação, aumentar a conscientização e a capacidade humana e institucional sobre mitigação, adaptação, redução de impacto e alerta precoce da mudança de clima. </h4>
+    <h3 id="b10">-Meta 4</h3>
+       <h4 id="b9">#13.a-Implementar o compromisso assumido pelos países participantes da Convenção Quadro das Nações Unidas sobre Mudança do Clima [UNFCCC] para uma meta de mobilizar conjuntamente US $ 100 bilhões por ano a partir de 2020, de todas as fontes, para atender às necessidades dos países em desenvolvimento, sem contexto das ações de mitigação aplicáveis ​​e transparência na implementação; e operacionalizar plenamente o Fundo Verde para Clima por meio de sua capitalização ou mais cedo possível. </ h4 >
+    <h3 id="b10">-Meta 5 </h3>
+       <h4 id="b9">#13.b-Promover mecanismos para a criação de capacidades para o planejamento relacionado à mudança do clima e à gestão eficaz, nos países menos desenvolvidos, inclusive com foco em mulheres, jovens, comunidades locais e marginalizadas.</h4>
     <h1> __________________________________________________________________________________________________________________________ </h1>
+   </div>
+   <div id="b11">
+      <h2 id="t4">__________________________________________________________________________________________________________________________</h2>
+      <h4 id="t4">-Atualmente é de conhecimento de quase toda a população mundial, as alterações climáticas que vem ocorrendo por conta do aquecimento global, catástrofes gigantecas em todas as partes do mundo, ciclones, tornados, tempestades tropicais, aumento do nivel do mar, derretimento das calotas polares, aquecimento das águas oceânicas, secas, e aumento da temperatura da terra anualmente, todos esses fatores foram conseguintes de práticas e atividades humanos prejudiciais ao nosso planeta. 
+         <br>
+         -Com a chegada da Idade Moderna, e as inumeras revoluções industriais ao redor do mundo a liberação de dióxido de carbono, metano, cfc's, e outros tipos de gases, além de desmatamento e queimadas, aumentou significamente, estes liberados pelas grandes fábricas e automóveis.   A ODS 13 veio exatamente para alertar sobre os riscos das mudanças climáticas caso não seja tomadas práticas que diminuam o aumento destas.
+         -É necessário que medidas sejam tomadas para solucionar esse destino catastrófico que nos espera, medidas simples como:
+               <ul> -Por parte das pessoas...
+                     <li>Sempre que possível caminhar e andar de bicicleta para ir a lugares próximos a fim de diminuir a liberação de fumaça por automóveis.</li>
+                     <li>Evitar de queimar lixo;</li>
+                     <li>Orientar pessoas a não queimarem lixo também;</li>
+                     <li>Não jogar garrafas de vidro, pontas de cigarro e outras coisas que podem ocasinar incêndios em locais como pastagens e/ou onde existe um material em abundância que seja inflamável;</li>
+                     <li>Plantar árvores e outras plantas, pois elas ajudam a diminuir os níveis de gás carbônico, e a liberar oxigênio;</li>
+                     <li>Não desmatar;</li>
+                     <li>Colocar filtros de fumaça em carros, motos, etc;</li>
+               </ul>
+               <ul>-Por parte do estado e empresas...
+                      <li>Implementação por parte do estado de programas de reflorestamento, criação de reservas florestais, maior arborização de zonas urbanas entre outras medidas para aumento da flora terrestre;</li>
+                      <li>As empresas que detém fábricas de produção de produtos estudarem métodos para não liberar poluentes em grande escala para a atmosfera;</li>
+                      <li>Criação de mais leis que punam quem desmata, e empresas que liberam poluentes em excesso;</li>
+               </ul>
+               <img id="t6" src="mundo.jpg" width="600" height="300" alt="Imagem da terra dividida entre um antes e depois caso o aquecimento global continue."/>
+               <p>
+                     <br>
+                     <br>
+
+               </p>
+               </h4>
+             <h2 id="t7">"A mãe natureza chora, a cada momento em que se vê sendo destruída, mas ela não fica passiva a isso, ela revida. Os seres humanos apenas não veem que tudo que eles fazem será retribuído igualmente pela ira da natureza. Cabe a nós como seres racionais tomar a mãe natureza como nossa aliada, ou nossa inimiga..."</h2>
+
+     
+ 
    </div>
 </body>
 
