--- a/atividade3.html
+++ b/atividade3.html
@@ -1,17 +1,17 @@
 <html>
 <html  lang = " pt ">
-<head>
-    <link  rel="stylesheet" type="text/css" href ="style1.css" media = "screen"/>
-    <link rel="shortcut icon" type="imagem" href="ods13.jpg"/>
-    <meta  charset = " UTF-8 " >
-    <title> Ação Contra a Mudança Global do Clima </title>
-</head>
+      <head>
+            <link  rel="stylesheet" type="text/css" href ="style1.css" media = "screen"/>
+               <link rel="shortcut icon" type="imagem" href="ods13.jpg"/>
+                  <meta  charset = " UTF-8 " >
+                     <meta name="viewport" content="width=device-width, initial scale=1.0">
+                        <title> Ação Contra a Mudança Global do Clima </title>
+      </head>
 <body>
     <div id="t1">
-    <h1> __________________________________________________________________________________________________________________________ </h1>
+         <h1> __________________________________________________________________________________________________________________________ </h1>
     <h1 id="b1"> Ação Contra a Mudança Global do Clima </h1> 
        <h2 id="b1a"> Tomar medidas urgentes para combater uma mudança climática e seus impactos. </h2>
-        <img src="ods13.jpg" widht=100px height=100px id="b3" alt="Retrato de um casal de ursos em cima de um bloco de gelo que provavelmente se soltou das geleiras por conta do aquecimento global." />
          <p>
          <br>
          <br>
@@ -25,17 +25,17 @@
          <br>
          </p>
           <a id="b2" href="https://nacoesunidas.org/pos2015/ods13/" target="Oi">Clique ODS 13</a> 
-     <h1> _________________________________________________________________________________________________________________________ </h1>        
+         <h1> _________________________________________________________________________________________________________________________ </h1>        
     </div>
     <div id="t2">
-     <h1>__________________________________________________________________________________________________________________________</h1>
-         <h1 id="b5"> ODS # 13 Ação Contra a Mudança Global do Clima </h1>
-         <h4 id="b6"> Combate às alterações climáticas. Assim como no ODS 11, este objetivo confere importância à resiliência e a capacidade de adaptação dos grupos humanos diante dos riscos associados ao clima e às características naturais de todos os países. </h4>
+          <h1>__________________________________________________________________________________________________________________________</h1>
+             <h1 id="b5"> ODS # 13 Ação Contra a Mudança Global do Clima </h1>
+               <h4 id="b6"> Combate às alterações climáticas. Assim como no ODS 11, este objetivo confere importância à resiliência e a capacidade de adaptação dos grupos humanos diante dos riscos associados ao clima e às características naturais de todos os países. </h4>
          <p>
          <br>
          <br>
          </p>
-         <img src="pexeels.jpg" widht=500px height=500px alt="Imagem de uma grande queimada em uma serra a beira de um lago durante a noite." id="b4" />
+         <img  id="b4" src="pexeels.jpg" widht=500px height=500px alt="Imagem de uma grande queimada em uma serra a beira de um lago durante a noite." id="b4" />
          <iframe id="t3"  width=" 560" height="315" src ="https://www.youtube.com/embed/BtrJntzrp8M " frameborder = " 0 " allow = " acelerômetro; reprodução automática; reprodução automática; mídia criptografada; giroscópio; entrada de imagem -Picture" allowFullScreen> </iframe>
          <img id="b8" src="vexels.jpg" width="200" height="200" alt="ilustração em forma de desenho de uma fábrica liberando fumaça de uma chaminé."/>
     <h1> __________________________________________________________________________________________________________________________ </h1>
